# rpihal

./: .gitattributes  .gitignore  anomalies.md  dev-info.md  emulator.md  raspberrypi-models.md  readme.md  release-notes.md
doc/: raspberrypi-models.md
examples/: .gitignore
examples/iono-pi/: ionoPi.h  main.c  makefile  readme.md
examples/print-cpu-temp/: .gitignore  CMakeLists.txt  main.c
examples/staircase/: .gitignore  readme.md
examples/staircase/emu/: .gitignore
examples/staircase/emu/cmake/: CMakeLists.txt
examples/staircase/emu/vs/: rpihal-example-staircase-emu.sln  rpihal-example-staircase-emu.vcxproj  rpihal-example-staircase-emu.vcxproj.filters
examples/staircase/src/: ionoPi.h  main.c
include/rpihal/: defs.h  gpio.h  i2c.h  int.h  rpihal.h  spi.h  sys.h  uart.h
include/rpihal/common/: types.h
include/rpihal/emu/: emu.h
src/: __platform_check__.h  gpio.c  i2c.c  int.c  rpihal.c  spi.c  sys.c  uart.c  zPlatformCheck.h
src/emu/: emu.cpp  emu.h
src/internal/: gpio.c  gpio.h  log.h  platform_check.h  util.c  util.h
test/system/: .gitignore  main.cpp  readme.md  uart.cpp
test/system/gpio/: main.cpp  makefile
test/system/uart-hdsp/: main.c  main.cpp  makefile
